--- a/.github/workflows/alert-menta.yaml
+++ b/.github/workflows/alert-menta.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Download and Install alert-menta
         run: |
           curl -sLJO -H 'Accept: application/octet-stream' \
-          "https://${{ secrets.GITHUB_TOKEN }}0@api.github.com/repos/pacificbelt30/alert-menta/releases/assets/$( \
+          "https://${{ secrets.GITHUB_TOKEN }}@api.github.com/repos/pacificbelt30/alert-menta/releases/assets/$( \
           curl -sL "https://${{ secrets.GITHUB_TOKEN }}@api.github.com/repos/pacificbelt30/alert-menta/releases/tags/v0.0.5" \
           | jq '.assets[] | select(.name | contains("Linux_x86")) | .id')"
           tar -zxvf alert-menta_Linux_x86_64.tar.gz
