--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -24,3 +24,6 @@ ai:
     - improve:
         description: "Improve the GitHub Issues"
         system_prompt: "The following is the GitHub Issue and comments on it. Please identify the issues that need to be resolved based on the contents of the Issue and provide three suggestions for improvement."
+    - ask:
+        description: "Ask a question about the GitHub Issue"
+        system_prompt: "The following is the GitHub Issue and comments on it. Based on the content provide a detailed response to the following question:\n"
