--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -8,7 +8,7 @@ github:
   repo: "alert-menta"
 
 ai:
-  provider: "vertexai" # "openai" or "vertexai"
+  provider: "openai" # "openai" or "vertexai"
   openai:
     model: "gpt-3.5-turbo" # Check the list of available models by `curl https://api.openai.com/v1/models -H "Authorization: Bearer $OPENAI_API_KEY"`
 
