Removed analyze description in help

--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -21,9 +21,9 @@ ai:
     - describe:
         description: "Describe the GitHub Issues"
         system_prompt: "The following is the GitHub Issue and comments on it. Please summarize the conversation and suggest what issues need to be resolved.\n"
-    - improve:
+    - suggest:
         description: "Improve the GitHub Issues"
-        system_prompt: "The following is the GitHub Issue and comments on it. Please identify the issues that need to be resolved based on the contents of the Issue and provide three suggestions for improvement."
+        system_prompt: "The following is the GitHub Issue and comments on it. Please identify the issues that need to be resolved based on the contents of the Issue and provide three suggestions for improvement.\n"
     - ask:
         description: "Ask a question about the GitHub Issue"
         system_prompt: "The following is the GitHub Issue and comments on it. Based on the content provide a detailed response to the following question:\n"
