--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -20,9 +20,9 @@ ai:
   commands:
     - describe:
         description: "Describe the GitHub Issues"
-        system_prompt: "The following is the GitHub Issue and comments on it. Please summarize the conversation and suggest what issues need to be resolved.\n"
+        system_prompt: "The following is the GitHub Issue and comments on it. Please Generate a detailed description.\n"
     - suggest:
-        description: "Improve the GitHub Issues"
+        description: "Provide suggestions for improvement based on the contents of the Issue"
         system_prompt: "The following is the GitHub Issue and comments on it. Please identify the issues that need to be resolved based on the contents of the Issue and provide three suggestions for improvement.\n"
     - ask:
         description: "Ask a question about the GitHub Issue"
