Removed unused items from the configuration file and added the ability to validate subcommands

--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -1,11 +1,6 @@
 system:
   debug: 
-    mode: True
     log_level: debug
-
-github:
-  owner: "pacificbelt30"
-  repo: "alert-menta"
 
 ai:
   provider: "openai" # "openai" or "vertexai"
@@ -19,11 +14,11 @@ ai:
   
   commands:
     - describe:
-        description: "Describe the GitHub Issues"
+        description: "Generate a detailed description of the Issue."
         system_prompt: "The following is the GitHub Issue and comments on it. Please Generate a detailed description.\n"
     - suggest:
-        description: "Provide suggestions for improvement based on the contents of the Issue"
+        description: "Provide suggestions for improvement based on the contents of the Issue."
         system_prompt: "The following is the GitHub Issue and comments on it. Please identify the issues that need to be resolved based on the contents of the Issue and provide three suggestions for improvement.\n"
     - ask:
-        description: "Ask a question about the GitHub Issue"
+        description: "Answer free-text questions."
         system_prompt: "The following is the GitHub Issue and comments on it. Based on the content provide a detailed response to the following question:\n"
