--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,4 +34,5 @@ jobs:
       - name: Run golangci-lint with reviewdog
         run: |
           golangci-lint run --out-format=line-number | reviewdog -f=golangci-lint -reporter=github-check
-        REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
