--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,15 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended"
-  ]
+  ],
+  "baseBranches": [
+    "develop"
+  ],
+  "additionalReviewers": [
+    "pacificbelt30"
+  ],
+  "schedule": [
+    "at any time"
+  ],
+  "timezone": "Asia/Tokyo"
 }
